# rusty_calc

./: Cargo.toml  Makefile  ci.sh
.circleci/: config.yml
debian/: README.Debian  README.source  changelog  control  copyright  rusty-calc_0.1.0_amd64.deb
src/: lib.rs  main.rs
