[package]
name = "rusty-calc"
version = "0.1.1"
edition = "2021"

[dependencies]
cranelift-jit = "0.84.0"
cranelift = "0.84.0"
cranelift-module = "0.84.0"
cranelift-codegen = "0.84.0"
lazy_static = "1.4.0"
math_parser = "0.3.2"

[[bin]]
name = "rc_bin"
path = "./src/main.rs"

[lib]
name = "rc_lib"
path = "./src/lib.rs"
